# godot421-rust-minimal-lib-setup

./: .gitignore  README.md
godot/: lib1.gdextension  lib2.gdextension
godot/godot-rust-hello_world/: icon.svg.import  lib1.gdextension  lib2.gdextension  main_2d.tscn  project.godot
rust/: Cargo.toml  build.sh
rust/lib1/: Cargo.toml
rust/lib1/src/: lib.rs  my_rust_lib.rs
rust/lib2/: Cargo.toml
rust/lib2/src/: lib.rs  mod.rs  my_rust_lib2.rs
rust/shared_internal_lib/: Cargo.toml
rust/shared_internal_lib/src/: lib.rs  mod.rs  my_rust_lib.rs
