[package]
name = "shared_internal_lib"
version = "0.1.0"
edition = "2021"

[lib]
# crate-type:
# * cdylib - c ABI compatible dylib (.so/.dll)
# * dylib - dynamic library that disregards C ABI compatiblity
# * staticlib - static lib (.a and/or .lib)
# * rlib - rust library for use by OTHER rust code
# NOTE: at least for Linux, it's best to stick with STATIC libs (rlib) because different distros will use different gcc libs
# For cross-compiling, consider https://github.com/rust-cross/cargo-zigbuild if the libs between distros and/or O/S-Platform
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
